modifications done and build the apk file

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "refactored",
+    "name": "Sage Realty Tracker",
     "slug": "refactored",
     "version": "1.0.0",
     "orientation": "portrait",
@@ -16,12 +16,14 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.ayushreact.refactored",
+      "usesCleartextTraffic": true  
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/icon.png"
     }
   }
 }
