--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -38,7 +38,9 @@
     "react-native-svg": "^15.2.0",
     "react-navigation": "^4.4.4",
     "react-redux": "^9.1.2",
-    "victory-native": "^41.0.2"
+    "victory-native": "^41.0.2",
+    "react-native-screens": "3.31.1",
+    "react-native-safe-area-context": "4.10.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
