--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@stalwartszen/react-native-expo-blur": "^1.0.0",
     "axios": "^1.7.3",
     "expo": "~51.0.24",
+    "expo-av": "~14.0.6",
     "expo-blur": "~13.0.2",
     "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "~13.0.2",
@@ -29,18 +30,20 @@
     "gifted-charts-core": "^0.1.29",
     "react": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-animatable": "^1.4.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "^2.18.1",
     "react-native-gifted-charts": "^1.4.28",
+    "react-native-loader-kit": "^2.0.8",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
     "react-native-svg": "^15.2.0",
     "react-navigation": "^4.4.4",
     "react-redux": "^9.1.2",
-    "victory-native": "^41.0.2",
-    "react-native-screens": "3.31.1",
-    "react-native-safe-area-context": "4.10.5"
+    "victory-native": "^41.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
