--- a/package.json
+++ b/package.json
@@ -36,11 +36,14 @@
     "react-native-gesture-handler": "^2.18.1",
     "react-native-gifted-charts": "^1.4.28",
     "react-native-loader-kit": "^2.0.8",
+    "react-native-multiple-select": "^0.5.12",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-sectioned-multi-select": "^0.10.0",
     "react-native-svg": "^15.2.0",
+    "react-native-virtualized-view": "^1.0.0",
     "react-navigation": "^4.4.4",
     "react-redux": "^9.1.2",
     "victory-native": "^41.0.2"
