--- a/package.json
+++ b/package.json
@@ -12,30 +12,27 @@
     "@expo/vector-icons": "^14.0.2",
     "@metafic-co/react-native-glassmorphism": "^0.1.2",
     "@react-native-community/blur": "^4.4.0",
-    "@react-native-community/datetimepicker": "^8.2.0",
-    "@react-native-picker/picker": "^2.7.7",
+    "@react-native-community/datetimepicker": "^8.0.1",
+    "@react-native-picker/picker": "^2.7.5",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "@reduxjs/toolkit": "^2.2.7",
-    "@shopify/react-native-skia": "^1.3.10",
+    "@shopify/react-native-skia": "^1.2.3",
     "@stalwartszen/react-native-expo-blur": "^1.0.0",
     "axios": "^1.7.3",
-    "expo": "~51.0.24",
+    "expo": "~51.0.28",
     "expo-av": "~14.0.6",
-    "expo-blur": "~13.0.2",
     "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "~13.0.2",
     "expo-status-bar": "~1.12.1",
-    "gifted-charts-core": "^0.1.29",
     "react": "18.2.0",
-    "react-native": "0.74.3",
+    "react-native": "^0.74.5",
     "react-native-animatable": "^1.4.0",
-    "react-native-chart-kit": "^6.12.0",
+    "react-native-animated-loader": "^1.0.0",
     "react-native-datepicker": "^1.7.2",
-    "react-native-gesture-handler": "^2.18.1",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-gifted-charts": "^1.4.28",
-    "react-native-loader-kit": "^2.0.8",
     "react-native-multiple-select": "^0.5.12",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.10.1",
@@ -46,7 +43,8 @@
     "react-native-virtualized-view": "^1.0.0",
     "react-navigation": "^4.4.4",
     "react-redux": "^9.1.2",
-    "victory-native": "^41.0.2"
+    "victory-native": "^41.0.2",
+    "lottie-react-native": "6.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
