--- a/package.json
+++ b/package.json
@@ -10,8 +10,6 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@metafic-co/react-native-glassmorphism": "^0.1.2",
-    "@react-native-community/blur": "^4.4.0",
     "@react-native-community/datetimepicker": "^8.0.1",
     "@react-native-picker/picker": "^2.7.5",
     "@react-navigation/bottom-tabs": "^6.6.1",
@@ -19,12 +17,10 @@
     "@react-navigation/stack": "^6.4.1",
     "@reduxjs/toolkit": "^2.2.7",
     "@shopify/react-native-skia": "^1.2.3",
-    "@stalwartszen/react-native-expo-blur": "^1.0.0",
     "axios": "^1.7.3",
     "expo": "~51.0.28",
     "expo-av": "~14.0.6",
     "expo-image-picker": "~15.0.7",
-    "expo-linear-gradient": "~13.0.2",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "^0.74.5",
@@ -32,19 +28,17 @@
     "react-native-animated-loader": "^1.0.0",
     "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "~2.16.1",
-    "react-native-gifted-charts": "^1.4.28",
-    "react-native-multiple-select": "^0.5.12",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-sectioned-multi-select": "^0.10.0",
     "react-native-svg": "^15.2.0",
     "react-native-virtualized-view": "^1.0.0",
     "react-navigation": "^4.4.4",
     "react-redux": "^9.1.2",
     "victory-native": "^41.0.2",
-    "lottie-react-native": "6.7.0"
+    "lottie-react-native": "6.7.0",
+    "expo-location": "~17.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
