day 25 added some validations and linked Site visit and Home visit

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "Sage Realty Tracker",
+    "name": "S.R. Tracker",
     "slug": "refactored",
     "version": "1.0.0",
     "orientation": "portrait",
