--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@reduxjs/toolkit": "^2.2.7",
     "@shopify/react-native-skia": "^1.2.3",
     "axios": "^1.7.3",
-    "expo": "~51.0.28",
+    "expo": "~51.0.31",
     "expo-av": "~14.0.6",
     "expo-image-picker": "~15.0.7",
+    "expo-location": "~17.0.1",
     "expo-status-bar": "~1.12.1",
+    "lottie-react-native": "6.7.0",
     "react": "18.2.0",
     "react-native": "^0.74.5",
     "react-native-animatable": "^1.4.0",
@@ -36,9 +38,7 @@
     "react-native-virtualized-view": "^1.0.0",
     "react-navigation": "^4.4.4",
     "react-redux": "^9.1.2",
-    "victory-native": "^41.0.2",
-    "lottie-react-native": "6.7.0",
-    "expo-location": "~17.0.1"
+    "victory-native": "^41.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
