--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-community/blur": "^4.4.1",
     "@react-native-community/datetimepicker": "^8.0.1",
     "@react-native-picker/picker": "^2.7.5",
@@ -22,6 +23,7 @@
     "axios": "^1.7.3",
     "expo": "~51.0.31",
     "expo-av": "~14.0.6",
+    "expo-blur": "~13.0.2",
     "expo-image-picker": "~15.0.7",
     "expo-location": "~17.0.1",
     "expo-status-bar": "~1.12.1",
@@ -40,8 +42,7 @@
     "react-native-virtualized-view": "^1.0.0",
     "react-navigation": "^4.4.4",
     "react-redux": "^9.1.2",
-    "victory-native": "^41.0.2",
-    "expo-blur": "~13.0.2"
+    "victory-native": "^41.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
